# ccw

./: CLAUDE.md  README.md  index.html  llms.txt  pyproject.toml
.claude/: settings.json
assets/: app.js  style.css
scripts/: diagnose.sh  post-tool-use.sh  session-start.sh  setup.sh
src/ccw/: __init__.py  cli.py  detect.py  sections.py  settings.py
tests/: test_cli.py  test_cli_auto.py  test_cli_test_command.py  test_detect.py  test_detect_versions.py  test_post_tool_use.py  test_sections.py  test_settings_network.py  test_versions_auto.py
